# ESPIDF_OTA_PACK

./: LICENSE  README.md
https_ota_pack/: CMakeLists.txt  https_ota_pack.c
https_ota_pack/include/: https_ota_pack.h  partition_utils.h
